--- a/bsf-group-13/client/src/components/NavBar.css
+++ b/bsf-group-13/client/src/components/NavBar.css
@@ -1,15 +1,15 @@
 #head {
     display: flex;
     flex-direction: row;
-    margin: 0;
+    margin: 25px;
     background-color: white;
-    justify-content: center;
+    justify-content: left;
     margin-bottom: 2em;
-    box-shadow: 0px 5px 10px;
 }
 
 .navLink a {
     font-size: x-large;
-    color: navy;
+    color: black;
     text-decoration: none;
 }
+
