--- a/bsf-group-13/client/src/components/NavBar.css
+++ b/bsf-group-13/client/src/components/NavBar.css
@@ -1,9 +1,10 @@
 #head {
     display: flex;
     flex-direction: row;
-    margin: 25px;
+    margin: 0px;
     background-color: white;
-    justify-content: left;
+    justify-content: center;
+    margin-top: 2em;
     margin-bottom: 2em;
 }
 
