--- a/bsf-group-13/client/src/components/NavBar.css
+++ b/bsf-group-13/client/src/components/NavBar.css
@@ -3,14 +3,19 @@
     flex-direction: row;
     margin: 0px;
     background-color: white;
-    justify-content: center;
+    justify-content: left;
     margin-top: 2em;
     margin-bottom: 2em;
+
+
 }
 
 .navLink a {
     font-size: x-large;
     color: black;
     text-decoration: none;
+}
+header{
+    width: 75%;
 }
 
